# CMakeSetup

./: README.md
Setup-Steps/: CMakeLists.txt  main.cpp
Setup-Steps/include/: Game.h
Setup-Steps/source/: Game.cpp
